# Factory_project_cpp

./: CMakeLists.txt  README.md  Services.cpp  Services.h  Template.h  Tfactory.cpp  Tfactory.h  Tmotor_vehicle.cpp  Tmotor_vehicle.h  Tvehicle.cpp  Tvehicle.h  Vehicles.cpp  Vehicles.h  functions.cpp  functions.h  main.cpp  stdin1.txt  stdin2.txt  temat4.txt
