cmake_minimum_required(VERSION 3.17)
project(GortychDamian-etap3)

set(CMAKE_CXX_STANDARD 14)

add_executable(GortychDamian-etap3 main.cpp Tvehicle.cpp Tfactory.h Tfactory.cpp functions.h functions.cpp Tvehicle.h Tmotor_vehicle.h Tmotor_vehicle.cpp Services.h Services.cpp Vehicles.h Vehicles.cpp Template.h)